<resources>
    <string name="app_name">Viet-Russia Russia-Viet Dictionary</string>
    <string name="app_name_vi_ru">Viet-Russia Dictionary</string>
    <string name="app_name_ru_vi">Russia-Viet Dictionary</string>
    <string name="app_name_splash">Viet-Russia Russia-Viet\nDictionary</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_connect">No internet connection!</string>
    <string name="history">History</string>
    <string name="favorite">Bookmark</string>
    <string name="translate">Sentence translator</string>
    <string name="selectDict">Manage Dicts</string>
    <string name="help">Help</string>
    <string name="likeMe">Like me</string>
    <string name="setting">Settings</string>
    <string name="popupDict">Popup mode</string>
    <string name="noSupportSpeechVoice">No text-to-speech (TTS) engine found on your device!</string>
    <string name="loading">Loading…</string>
    <string name="download_fail">Download failed!</string>
    <string name="search">Search…</string>
    <string name="dictNotFound">No dictionaries downloaded, download now?</string>
    <string name="searchword">Word lookup</string>
    <string name="title_close_app">Exit</string>
    <string name="message_close_app">Do you want to exit the application or open popup window?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_meaning_word">MeaningWordActivity</string>
    <string name="tryAgain">Try again</string>
    <string name="nodata">No data</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_settings">Setttings</string>
    <string name="title_activity_popup_launcher">PopupLauncherActivity</string>
    <string name="openNextDict">Open</string>
    <string name="exit">Exit</string>
    <string name="late">Later</string>
    <string name="downNow">Download</string>
    <string name="confirmDelHistory">Clear history?</string>
    <string name="no">No</string>
    <string name="accept">Accept</string>
    <string name="confirmDelFavorite">Clear favorite words?</string>
    <string name="extracting">Extracting...</string>
    <string name="title_activity_fap">FapActivity</string>
    <string name="zoomout">Zoom out</string>
    <string name="hide">Hide</string>
    <string name="close">Close</string>
    <string name="corner">Corner</string>
    <string name="maximize">Maximize</string>
    <string name="clickToRestore">Tap to open popup window</string>
    <string name="Hidden">Hidden</string>
    <string name="ClickToAddAnew">Tap to open new window</string>
    <string name="UK">UK</string>
    <string name="US">US</string>
    <string name="fontSize">Font size</string>
    <string name="small">Small</string>
    <string name="normal">Normal</string>
    <string name="large">Big</string>
    <string name="huge">Bigger</string>
    <string name="popupOpening">Popup window</string>
    <string name="tapClose">Tap to close</string>
    <string name="downloadFilePleaseWait">Downloading...</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="facebook_app_id">1656914404570512</string>
    <string name="loginWithFacebook">FACEBOOK</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="traTu">Word lookup</string>
    <string name="soTuDienDownloadCungLuc">Maximal concurrent dicts</string>
    <string name="banBeDaGioiThieu">Number of referees</string>
    <string name="danhSachBanDaMoi">Invited friends</string>
    <string name="register">Register</string>
    <string name="registerN">Register</string>
    <string name="repassword">Repeat</string>
    <string name="inputUserName">Username is required</string>
    <string name="inputPassword">Password is required</string>
    <string name="inputRepassword">Repeat the password</string>
    <string name="passwordNotEqual">Password mismatch</string>
    <string name="email">Email</string>
    <string name="inputEmail">Email is required</string>
    <string name="pleaseWait">Please wait…</string>
    <string name="loginSuccess">Login success</string>
    <string name="needLogin">Please login to use this function</string>
    <string name="inputSource">Please input a sentence/paragraph to translate</string>
    <string name="dich">TRANSLATE</string>
    <string name="notFoundWord">Word not found</string>
    <string name="needNetwork">This feature needs internet connection!</string>
    <string name="notFoundLangsSrc">Invalid source language</string>
    <string name="notFoundLangsDes">Invalid destination language</string>
    <string name="hetLuotDown">You have reach the maximum number of dicts for your account</string>
    <string name="Fanpage">Fanpage</string>
    <string name="orLogin">or Login with </string>
    <string name="forgetPass">Forgot password?</string>
    <string name="confirmDelDict">Delete downloaded dict?</string>
    <string name="delDictSuccess">Dict deleted successfully</string>
    <string name="needLoginToDownload">Please Login to download more dicts</string>
    <string name="popupMode">Popup</string>
    <string name="words">words</string>
    <string name="dictNotFoundCheck">No dicts selected</string>
    <string name="clipboard">Clipboard</string>
    <string name="clipboardDescription">Automatically paste copied text in popup window</string>
    <string name="soTuDaTra">Looked-up words</string>
    <string name="soTuYeuThich">Favorite words</string>
    <string name="user_normal">Normal user</string>
    <string name="user_pro">Pro user</string>
    <string name="user_ultimate">VIP user</string>
    <string name="extracSuccess">Extracted dict is now ready to use!</string>
    <string name="extracFail">Extraction failed</string>
    <string name="downloadSuccess">Dict downloaded</string>
    <string name="needPermission">You need grant permission for the app</string>
    <string name="popupNextDict">Popup NextDict</string>
    <string name="what_new">What\'s new</string>
    <string name="references">References</string>
    <string name="dongTuBatQuyTac">Irregular verbs</string>
    <string name="danhTuSoNhieuBQT">Irregular plural nouns</string>
    <string name="thanhNgu">English idioms</string>
    <string name="tucNgu">English proverbs</string>
    <string name="cumDongTu">Phrasal verbs</string>
    <string name="cacTuVietTat">Popular Internet Acronyms</string>
    <string name="nhapTuCanTra">Input word</string>
    <string name="infinitive">Infinitive</string>
    <string name="simplePast">Simple Past</string>
    <string name="PastParticiple">Past Participle</string>
    <string name="meaning">Meaning</string>
    <string name="example">Example</string>
    <string name="singular">Singular</string>
    <string name="plural">Plural</string>
    <string name="group">Group</string>
    <string name="conjuagation">Conjuagation of</string>
    <string name="baseForm">Base Form</string>
    <string name="personSingular">3rd Person Singular</string>
    <string name="otherIregularVerbsFollowingASimilarPattern">Other iregular verbs following a similar pattern</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="delDictFail">Dict delete error</string>
    <string name="needVersionFull">This feature is only available on the full (free)</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="dictionary">Dictionary</string>
</resources>
