<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rdgSettingFontSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rbSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/small" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rbNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/normal" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rbLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/large" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rbHuge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/huge" />
    </RadioGroup>
</RelativeLayout>