<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layoutDirection="ltr"
    android:textDirection="ltr"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".activity.BatQuyTacActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/dragScrollBar"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_frame_search"
                android:padding="5dp">

                <com.dictionary.viru.widget.customeControl.CustomEditText
                    android:id="@+id/edSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="@string/search"
                    android:imeOptions="actionSearch"
                    android:singleLine="true" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtInfinitive"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/infinitive"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtSimplePast"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/simplePast"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtPastParticiple"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/PastParticiple"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="7dp"
                android:background="@color/colorPrimary" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvListVerb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:scrollbars="vertical" />
        </LinearLayout>

        <com.turingtechnologies.materialscrollbar.DragScrollBar
            android:id="@+id/dragScrollBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:visibility="gone"
            app:lightOnTouch="false"
            app:recyclerView="@id/rvListVerb" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
