<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:textDirection="ltr"
    android:background="@color/white"
    tools:context=".activity.DetailSentencesActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvVerb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableRight="@mipmap/ic_search_2"
                android:text="aa"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_large"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txtMeaning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:drawableRight="@mipmap/ic_search_2"
                    android:text="@string/meaning"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_size" />

                <TextView
                    android:id="@+id/tvMeaning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="aaa"
                    android:textSize="@dimen/font_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtExample"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="5dp"
                    android:drawableRight="@mipmap/ic_search_2"
                    android:text="@string/example"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_size" />

                <TextView
                    android:id="@+id/tvExample"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="aaa"
                    android:textSize="@dimen/font_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/category"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_size"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="aaa"
                    android:textSize="@dimen/font_size"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txtCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/country"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_size"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="aaa"
                    android:textSize="@dimen/font_size"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>


    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
